# clinical-copilot

./: .dockerignore  .eval_baseline.json  .gitignore  .gitlab-ci.yml  .railwayignore  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  COST.md  EVAL.md  FINAL_QA.md  LEARNING.md  OPENEMR-README.md  PATIENT_DASHBOARD_MIGRATION.md  README.md  USER.md  W2_ARCHITECTURE.md  package-lock.json  package.json  railway.toml
agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
agent/evals/: README.md  conftest.py  sync_to_langfuse.py  test_adversarial.py  test_golden.py  test_smoke.py
agent/evals/_shared/: personas.yaml
agent/evals/adversarial/auth_escape/: 001_other_patient.yaml  002_id_smuggling.yaml  003_encounter_id_pivot.yaml
agent/evals/adversarial/data_quality/: 001_missing_dose.yaml  002_contradictory_vitals.yaml  003_stale_data.yaml
agent/evals/adversarial/injection/: 001_filename_directive.yaml  002_poisoned_note.yaml  003_system_prompt_leak.yaml  004_tool_injection.yaml
agent/evals/adversarial/negation/: 001_denies_chest_pain.yaml  002_meds_not_given.yaml
agent/evals/golden/multi_turn/: 001_eduardo_overnight_followup.yaml  002_triage_to_brief.yaml  003_cross_patient_pivot.yaml
agent/evals/golden/w10_med_safety/: 001_panel_scan.yaml
agent/evals/golden/w11_abx_stewardship/: 001_eduardo_no_abx.yaml
agent/evals/golden/w1_triage/: 001_dr_smith_panel.yaml
agent/evals/golden/w2_brief/: 001_eduardo_overnight.yaml  002_meds_held_overnight.yaml  003_kidney_function.yaml
agent/evals/golden/w4_cross_cover/: 001_eduardo_pickup.yaml
agent/evals/golden/w5_family_meeting/: 001_robert_chf_decomp.yaml
agent/evals/golden/w7_drill/: 001_creatinine_value.yaml
agent/evals/golden/w8_consult_orientation/: 001_cardiology_eduardo.yaml
agent/evals/golden/w9_recent_changes/: 001_eduardo_overnight_diff.yaml
agent/evals/smoke/: 001_basic_brief.yaml  002_active_meds.yaml  003_overnight_event.yaml  004_triage_panel.yaml  005_imaging_result.yaml  006_citation_syntax.yaml
agent/evals/w2/citation/: citation_001_doc_ref_with_value.yaml  citation_002_guideline_ref_with_section.yaml  citation_003_fhir_ref_w1_compat.yaml  citation_004_mixed_doc_and_guideline.yaml  citation_005_value_attr_mismatch.yaml  citation_006_missing_cite_tag.yaml
agent/evals/w2/evidence/: evidence_001_jnc8_htn_cited.yaml  evidence_002_ada_a1c_cited.yaml  evidence_003_kdigo_ckd_cited.yaml  evidence_004_jnc8_uncited.yaml  evidence_005_no_results_refusal.yaml  evidence_006_low_quality_refusal.yaml  evidence_007_multi_guideline_cited.yaml  evidence_008_hedged_no_claim.yaml
agent/evals/w2/fixtures/: intake_chen.json  intake_kowalski.json  intake_reyes.json  intake_whitaker.json  lab_chen_lipid.json  lab_kowalski_cmp.json  lab_reyes_hba1c.json  lab_whitaker_cbc.json
agent/evals/w2/intake/: intake_001_chen_clean.yaml  intake_002_whitaker_clean.yaml  intake_003_reyes_clean.yaml  intake_004_kowalski_clean.yaml  intake_005_chen_uncited.yaml  intake_006_reyes_fabricated.yaml  intake_007_whitaker_schema_invalid.yaml  intake_008_kowalski_demographics_only.yaml
agent/evals/w2/lab/: lab_001_chen_lipid_clean.yaml  (+9 more)
agent/scripts/: spike-fhir-observation-write.py  spike_fhir_observation_write.py  verify_guideline_corpus.py
agent/scripts/seed/: .gitignore  README.md  bootstrap_oauth.py  bootstrap_standalone_oauth.py  get_token.py  oauth_login.py  seed_careteam.py  verify_writes.py
agent/src/copilot/: __init__.py  audit.py  blocks.py  care_team.py  checkpointer.py  config.py  conversation_turns.py  conversations.py  cost_tracking.py  fhir.py  fixtures.py  graph.py  llm.py  observability.py  prompts.py  run_query.py  server.py  session.py  smart.py  standard_api_client.py  state.py  title_summarizer.py  token_crypto.py  tools.py
agent/tests/: README.md  test_abx_stewardship.py  test_audit.py  test_audit_no_phi.py  test_audit_observability.py  test_auth_endpoints.py  test_bbox_matcher.py  test_care_team_gate.py  test_case_schema_turns.py  test_chart_citations.py  test_chat_contract.py  test_ci_gates.py  test_clarify_routing.py  test_click_to_brief.py  test_consult_orientation.py  test_conversation_endpoints.py  test_conversation_rehydration.py  test_conversation_turns.py  test_conversations.py  test_cost_tracking.py  test_cross_cover_onboarding.py  test_dimension_result.py  test_doc_type_guard.py  test_document_client.py  test_docx_referral_upload.py  test_evidence_decision_support_prompt.py  test_extraction_persistence.py  test_extraction_schemas.py  test_extraction_tools.py  test_faithfulness_judge.py  test_fhir_token_resolution.py  test_graph_e2e_live.py  test_graph_integration.py  test_graph_smoke.py  test_guideline_citations.py  test_guideline_failure_ui.py  test_hl7_adt_upload.py  test_hl7_oru_upload.py  test_http_e2e_deployed.py  test_intake_extractor_prompt_safety.py  (+50 more)
agent/tests/eval/: test_llm_judge.py
agent/tests/integration/: test_extraction_persists_labs.py  test_fhir_observation_write.py  test_openemr_lab_result_module_live.py
copilot-ui/: .env.example  (+11 more)
(+353 files in other folders)
