[project]
name = "copilot"
version = "0.1.0"
description = "OpenEMR Clinical Co-Pilot — LangGraph agent service"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-prebuilt>=0.1.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "langfuse>=2.40.0",
    "pyyaml>=6.0",
    "langchain>=1.2.16",
]

[project.optional-dependencies]
postgres = [
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0",
]
eval = [
    "deepeval>=1.4.0",
]
seed = [
    "cryptography>=43.0.0",
    "pyjwt[crypto]>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
asyncio_mode = "auto"
markers = [
    "smoke: smoke tier eval cases (every PR, ~60s)",
    "golden: golden tier eval cases (nightly + on-demand)",
    "adversarial: adversarial tier eval cases (pre-release, weekly)",
    "drift: drift tier eval cases (on every model bump)",
]
