[project]
name = "copilot"
version = "0.1.0"
description = "OpenEMR Clinical Co-Pilot — LangGraph agent service"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-prebuilt>=0.1.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    # Required by FastAPI for multipart/form-data parsing — File()/UploadFile
    # parameters depend on it (issue 011 POST /upload endpoint).
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    # The 4.x SDK speaks OTLP to a langfuse v3 server (see ``infra/minio``
    # and the Railway ``langfuse-web`` / ``langfuse-worker`` services). The
    # v2 SDK requires ``langchain<1.x`` and is incompatible with our
    # ``langchain>=1.2.16`` pin, so do not downgrade.
    "langfuse>=4.5.0",
    "pyyaml>=6.0",
    "langchain>=1.2.16",
    # AES-GCM for token-bundle encryption at rest (issue 009). Required
    # at agent backend startup whenever CHECKPOINTER_DSN is set.
    "cryptography>=43.0.0",
    # PyMuPDF: PDF text extraction with word-level geometry, used by the
    # bbox matcher (issue 005) to locate VLM-extracted values inside the
    # source PDF.
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
postgres = [
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
]
# Hybrid retrieval over the clinical guideline corpus (issues 007 + 008).
# Kept in an extra so the base agent image stays slim; the deploy issue
# (012) wires this in alongside COHERE_API_KEY. Requires the ``postgres``
# extra to actually run (pgvector pushes vectors over psycopg).
retrieval = [
    "pgvector>=0.3.5",
    "cohere>=5.13.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0",
]
eval = [
    "deepeval>=1.4.0",
]
seed = [
    "pyjwt[crypto]>=2.9.0",
    "pymysql>=1.1.0",
    "bcrypt>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Citation regexes intentionally accept curly quotes (LLM output sometimes
# emits typographic quotes around <cite ref="..."/>). RUF001 would flag
# every char in those character classes.
"src/copilot/eval/evaluators.py" = ["RUF001"]
"src/copilot/eval/w2_evaluators.py" = ["RUF001"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
asyncio_mode = "auto"
markers = [
    "smoke: smoke tier eval cases (every PR, ~60s)",
    "golden: golden tier eval cases (nightly + on-demand)",
    "adversarial: adversarial tier eval cases (pre-release, weekly)",
    "drift: drift tier eval cases (on every model bump)",
    "live: end-to-end tests that hit real LLM / Cohere / VLM / OpenEMR. Costs real money per run (~$0.05–$0.20). Opt-in via `pytest -m live`. Skipped by default and by the pre-push gate.",
]
# ``live`` tests are opt-in — they need real API keys and run for tens of
# seconds. Default discovery excludes them so the unit + graph-integration
# layers stay sub-second.
addopts = "-m 'not live'"
